Fix scrollbars

--- a/app/assets/stylesheets/notes/notes.css
+++ b/app/assets/stylesheets/notes/notes.css
@@ -181,6 +181,10 @@
   overflow-y: scroll;
 }
 
+.links::-webkit-scrollbar { 
+    display: none; 
+}
+
 .links li {
   display: flex;
   align-items: center;
@@ -293,7 +297,8 @@
 .all-notes {
   display: block;
   will-change: transform;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   margin-top: -1px;
 }
 
@@ -369,12 +374,12 @@
 
 .note-form .title-input {
   width: 100%;
-  overflow: scroll;
   background: #fff;
   cursor: text;
   font-size: 34px;
   margin-bottom: 15px;
   padding-left: 8px;
+  padding-top: 10px;
   box-sizing: border-box;
   position: absolute;
   top: 65px;
@@ -717,4 +722,8 @@
   border: none;
   width: 100%;
   height: calc(100% - 72px);
+}
+
+.ql-editor::-webkit-scrollbar { 
+    display: none;
 }
